fix contrast

--- a/src/components/splash-page/SplashPage.css
+++ b/src/components/splash-page/SplashPage.css
@@ -42,7 +42,7 @@
   }
 }
 .list{
-  color:gold;
+  color:#edd60e;
   padding:0;
 }
 .imgContainer{
